Fix spacing.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,6 +3,15 @@
 	display: flex;
 }
 
+.count {
+	margin: 0 120px 0 0;
+}
+
+
+.ctn {
+	display: flex;
+}
+
 .btn {
 	display: inline-block;
 	margin: 10px 125px 0 50px;
